# SFML

./: .gitignore
Stars/: CMakeLists.txt  Stars.cpp
Stars/Docker/: Dockerfile  build_docker.sh  run-flame.sh  run-matrix-columns.sh  run-stars-docker-io.sh  run-stars.sh
Stars/Sources/: StarsModel.h
Stars/Sources/3d/: Camera.h  Triangle.cpp  Triangle.h
Stars/Sources/Common/: SfmlApp.cpp  SfmlApp.h
Stars/build_script/: run_cmake_sys.sh
Tanks/: .gitignore  CMakeLists.txt  Tanks.cpp
Tanks/Sources/: GameModel.h  GameView.h
Tanks/build_script/: run_cmake.sh
TestApp/: .gitignore  CMakeLists.txt
TestApp/src/: main.cpp
